--- a/public/styles_organizer.css
+++ b/public/styles_organizer.css
@@ -42,12 +42,12 @@ nav a:hover {
     text-decoration: underline;
 }
 
-h1, h2 {
+h1 {
     color: #333;
     text-align: center;
 }
 
-.organizer-container {
+.form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,52 +60,53 @@ h1, h2 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.organizer-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.form-container form {
     width: 100%;
 }
 
-.organizer-form .form-group {
+.form-container .form-group {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    max-width: 500px;
+    flex-direction: column;
     margin-bottom: 10px;
 }
 
-.organizer-form label {
-    width: 30%;
-    text-align: right;
-    margin-right: 10px;
+.form-container label {
+    margin-bottom: 5px;
 }
 
-.organizer-form input[type="text"],
-.organizer-form input[type="date"],
-.organizer-form textarea {
+.form-container input[type="text"],
+.form-container input[type="date"],
+.form-container textarea {
+    width: 100%;
     padding: 10px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    font-size: 16px;
-    width: 70%;
 }
 
-.organizer-form input[type="submit"] {
+.form-container textarea {
+    resize: none;
+}
+
+.submit-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.form-container input[type="submit"] {
     background: #28a745;
     color: #fff;
-    padding: 10px;
+    padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
-    width: 150px;
-    margin-top: 10px;
-    align-self: center;
+    display: block;
+    width: 50%;
+    text-align: center;
 }
 
-.organizer-form input[type="submit"]:hover {
+.form-container input[type="submit"]:hover {
     background: #218838;
 }
 
